--- a/samples/Nancy.Metadata.Swagger.Core.DemoApplication/wwwroot/index.html
+++ b/samples/Nancy.Metadata.Swagger.Core.DemoApplication/wwwroot/index.html
@@ -1,4 +1,4 @@
-<!-- HTML for static distribution bundle build -->
+﻿<!-- HTML for static distribution bundle build -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -74,7 +74,7 @@ window.onload = function() {
   
   // Build a system
   const ui = SwaggerUIBundle({
-    url: window.location.origin.concat('/api/docs'),
+    url: window.location.origin.concat('/api/docs/swagger.json'),
     dom_id: '#swagger-ui',
     deepLinking: true,
     presets: [
